src/test/resources/30/expanded/valid/svg-referenced/EPUB/svg-iframe-not-declared.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<h1>Lorem Ipsum</h1>
		<iframe src="image.svg" width="256" height="256"></iframe>
	</body>
</html>
