src/test/resources/30/expanded/invalid/data-nav-multiple/EPUB/data-nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
    xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="foo: http://example.org/foo/">
    <head>
        <title>Data Navigation Document</title>
    </head>
    <body>
        <nav epub:type="foo:bar">
            <p>anything</p>
        </nav>
    </body>
</html>
